{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 552,
  "lineage": "509ce138-9d32-ea04-853f-59bd2d9d95a4",
  "resources": [
    {
      "module": "module.backend-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "module.backend-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bff17dff2fe8e496",
            "arn": "arn:aws:ec2:ap-south-2:065884630855:instance/i-0019145bbf781d674",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0019145bbf781d674",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-052db01e2591f520c"
              }
            ],
            "primary_network_interface_id": "eni-052db01e2591f520c",
            "private_dns": "ip-172-20-1-175.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.175",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e1f5dc4d1c8acc67",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cc8b2b97e1cd026",
            "tags": {
              "Name": "backend-public"
            },
            "tags_all": {
              "Name": "backend-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f93fd9ba9ee6988"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "i-0019145bbf781d674",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/backend-alb/75913c832544c24f",
            "arn_suffix": "app/backend-alb/75913c832544c24f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-108025167.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/backend-alb/75913c832544c24f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "ap-south-2",
            "security_groups": [
              "sg-043027ecb54bd6507"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cc8b2b97e1cd026"
              },
              {
                "subnet_id": "subnet-0415fde59d445d8b1"
              }
            ],
            "subnets": [
              "subnet-01cc8b2b97e1cd026",
              "subnet-0415fde59d445d8b1"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-05203a872a76b406a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/backend-alb/75913c832544c24f"
          },
          "dependencies": [
            "module.backend_alb.aws_lb_target_group.back_end",
            "module.vpc.aws_security_group.alb_backend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:listener/app/backend-alb/75913c832544c24f/a5f2507cec1002e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/backend-tg/0368a09c4b09fad1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:listener/app/backend-alb/75913c832544c24f/a5f2507cec1002e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/backend-alb/75913c832544c24f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:listener/app/backend-alb/75913c832544c24f/a5f2507cec1002e1"
          },
          "dependencies": [
            "module.backend_alb.aws_lb.back_end",
            "module.backend_alb.aws_lb_target_group.back_end",
            "module.vpc.aws_security_group.alb_backend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/backend-tg/0368a09c4b09fad1",
            "arn_suffix": "targetgroup/backend-tg/0368a09c4b09fad1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/backend-tg/0368a09c4b09fad1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/backend-alb/75913c832544c24f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/backend-tg/0368a09c4b09fad1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhost",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bff17dff2fe8e496",
            "arn": "arn:aws:ec2:ap-south-2:065884630855:instance/i-08c1681105c99bf50",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c1681105c99bf50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06b013e96547a3583"
              }
            ],
            "primary_network_interface_id": "eni-06b013e96547a3583",
            "private_dns": "ip-172-20-1-61.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.61",
            "public_dns": "ec2-18-60-153-125.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.153.125",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-062f5d0beb1183cec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cc8b2b97e1cd026",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f93fd9ba9ee6988"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "i-08c1681105c99bf50",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "module.frontend-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bff17dff2fe8e496",
            "arn": "arn:aws:ec2:ap-south-2:065884630855:instance/i-0d3fd7de11e6f7778",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3fd7de11e6f7778",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0342827e2ed9f3e19"
              }
            ],
            "primary_network_interface_id": "eni-0342827e2ed9f3e19",
            "private_dns": "ip-172-20-1-44.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.44",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05239dd071f736c49",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cc8b2b97e1cd026",
            "tags": {
              "Name": "frontend-public"
            },
            "tags_all": {
              "Name": "frontend-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f93fd9ba9ee6988"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "i-0d3fd7de11e6f7778",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/frontend-alb/9d5e0febcbcfb920",
            "arn_suffix": "app/frontend-alb/9d5e0febcbcfb920",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-284172506.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/frontend-alb/9d5e0febcbcfb920",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "ap-south-2",
            "security_groups": [
              "sg-0bcb2ae01704b772b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cc8b2b97e1cd026"
              },
              {
                "subnet_id": "subnet-0415fde59d445d8b1"
              }
            ],
            "subnets": [
              "subnet-01cc8b2b97e1cd026",
              "subnet-0415fde59d445d8b1"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-05203a872a76b406a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/frontend-alb/9d5e0febcbcfb920"
          },
          "dependencies": [
            "module.frontend_alb.aws_lb_target_group.front_end",
            "module.vpc.aws_security_group.alb_frontend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_http",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:listener/app/frontend-alb/9d5e0febcbcfb920/dd9a421d8d41e5e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/frontend-tg/fb632751bd71f8dd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:listener/app/frontend-alb/9d5e0febcbcfb920/dd9a421d8d41e5e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/frontend-alb/9d5e0febcbcfb920",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:listener/app/frontend-alb/9d5e0febcbcfb920/dd9a421d8d41e5e1"
          },
          "dependencies": [
            "module.frontend_alb.aws_lb.front_end",
            "module.frontend_alb.aws_lb_target_group.front_end",
            "module.vpc.aws_security_group.alb_frontend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/frontend-tg/fb632751bd71f8dd",
            "arn_suffix": "targetgroup/frontend-tg/fb632751bd71f8dd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/frontend-tg/fb632751bd71f8dd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:065884630855:loadbalancer/app/frontend-alb/9d5e0febcbcfb920"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:065884630855:targetgroup/frontend-tg/fb632751bd71f8dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bb36de172a3ea39",
            "arn": "arn:aws:ec2:ap-south-2:065884630855:elastic-ip/eipalloc-03bb36de172a3ea39",
            "association_id": "eipassoc-08ec62fd6edb62ff5",
            "domain": "vpc",
            "id": "eipalloc-03bb36de172a3ea39",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-089594c9e9074e530",
            "private_dns": "ip-172-20-1-137.ap-south-2.compute.internal",
            "private_ip": "172.20.1.137",
            "public_dns": "ec2-18-61-22-97.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.22.97",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:internet-gateway/igw-0c041203decbf22a4",
            "id": "igw-0c041203decbf22a4",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-igw"
            },
            "tags_all": {
              "Name": "prod-vpc-igw"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bb36de172a3ea39",
            "association_id": "eipassoc-08ec62fd6edb62ff5",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03f7f1b19f4ae524c",
            "network_interface_id": "eni-089594c9e9074e530",
            "private_ip": "172.20.1.137",
            "public_ip": "18.61.22.97",
            "region": "ap-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cc8b2b97e1cd026",
            "tags": {
              "Name": "prod-vpc-nat"
            },
            "tags_all": {
              "Name": "prod-vpc-nat"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:route-table/rtb-0e2faf06418854a79",
            "id": "rtb-0e2faf06418854a79",
            "owner_id": "065884630855",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03f7f1b19f4ae524c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-private-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "rtb-0e2faf06418854a79",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:route-table/rtb-0d7be2b9687b68bfa",
            "id": "rtb-0d7be2b9687b68bfa",
            "owner_id": "065884630855",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c041203decbf22a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-public-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "rtb-0d7be2b9687b68bfa",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0890bdc37350eb7cf",
            "region": "ap-south-2",
            "route_table_id": "rtb-0e2faf06418854a79",
            "subnet_id": "subnet-080141a29957aa6c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081be6057f001d9da",
            "region": "ap-south-2",
            "route_table_id": "rtb-0e2faf06418854a79",
            "subnet_id": "subnet-0fa4e50619cf3d766"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0451f90523ab16931",
            "region": "ap-south-2",
            "route_table_id": "rtb-0e2faf06418854a79",
            "subnet_id": "subnet-08ccb2926ebc8a5b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c62c2803f617ff0d",
            "region": "ap-south-2",
            "route_table_id": "rtb-0e2faf06418854a79",
            "subnet_id": "subnet-0313d8f2bd5f62c5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b51a66ca9fcb1ec",
            "region": "ap-south-2",
            "route_table_id": "rtb-0e2faf06418854a79",
            "subnet_id": "subnet-0c7ea7b3f5acfe58b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1ef9ccd52da16b3",
            "region": "ap-south-2",
            "route_table_id": "rtb-0e2faf06418854a79",
            "subnet_id": "subnet-02c758b2b19da7e1d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0534f489fdcf7956a",
            "region": "ap-south-2",
            "route_table_id": "rtb-0d7be2b9687b68bfa",
            "subnet_id": "subnet-01cc8b2b97e1cd026"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079efa23133dc10d6",
            "region": "ap-south-2",
            "route_table_id": "rtb-0d7be2b9687b68bfa",
            "subnet_id": "subnet-0415fde59d445d8b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_backend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:security-group/sg-043027ecb54bd6507",
            "description": "Allow HTTP/HTTPS for backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043027ecb54bd6507",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "sg-043027ecb54bd6507",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:security-group/sg-0bcb2ae01704b772b",
            "description": "Allow HTTP/HTTPS from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcb2ae01704b772b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "sg-0bcb2ae01704b772b",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:security-group/sg-0ee8259946fff3374",
            "description": "Allow SSH + HTTP for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee8259946fff3374",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-server-sg"
            },
            "tags_all": {
              "Name": "backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "sg-0ee8259946fff3374",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:security-group/sg-03f93fd9ba9ee6988",
            "description": "Allow SSH from allowed CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f93fd9ba9ee6988",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-host-sg",
            "name_prefix": "",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-sg"
            },
            "tags_all": {
              "Name": "bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "sg-03f93fd9ba9ee6988",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:security-group/sg-078d7a0e128592292",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078d7a0e128592292",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "sg-078d7a0e128592292",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:security-group/sg-01c7d2edc560644b1",
            "description": "Allow SSH + HTTP for frontend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c7d2edc560644b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-server-sg"
            },
            "tags_all": {
              "Name": "frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "sg-01c7d2edc560644b1",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-0c7ea7b3f5acfe58b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7ea7b3f5acfe58b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-private-web-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-web-1"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-0c7ea7b3f5acfe58b",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt4",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-02c758b2b19da7e1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c758b2b19da7e1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-private-web-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-web-2"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-02c758b2b19da7e1d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt5",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-080141a29957aa6c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080141a29957aa6c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-private-app-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-app-1"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-080141a29957aa6c3",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt6",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-0fa4e50619cf3d766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa4e50619cf3d766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-private-app-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-app-2"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-0fa4e50619cf3d766",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt7",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-08ccb2926ebc8a5b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ccb2926ebc8a5b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-private-db-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-db-1"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-08ccb2926ebc8a5b5",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt8",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-0313d8f2bd5f62c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313d8f2bd5f62c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-private-db-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-db-2"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-0313d8f2bd5f62c5f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-01cc8b2b97e1cd026",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cc8b2b97e1cd026",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-01cc8b2b97e1cd026",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:subnet/subnet-0415fde59d445d8b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0415fde59d445d8b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065884630855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-05203a872a76b406a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "subnet-0415fde59d445d8b1",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:065884630855:vpc/vpc-05203a872a76b406a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0b52bb22bcd41c583",
            "default_route_table_id": "rtb-09b3e02978a9af347",
            "default_security_group_id": "sg-0c69638ee6b2da4ec",
            "dhcp_options_id": "dopt-0b6851801679ecec4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05203a872a76b406a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b3e02978a9af347",
            "owner_id": "065884630855",
            "region": "ap-south-2",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065884630855",
            "id": "vpc-05203a872a76b406a",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}